[package]
name = "pollua"
description = "Lua 5.3 bindings for Rust"
repository = "https://github.com/MisterPeModder/Pollua"
version = "0.1.0"
authors = ["Yanis Guaye <yguaye44@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["lua"]
categories = ["api-bindings", "development-tools::ffi"]

[dependencies]
lua-sys = { path = "lua-sys", default-features = false }

[features]
default = ["embedded-lua"]
embedded-lua = ["lua-sys/embedded-lua"]

[[example]]
name = "basic"
