[package]
name = "pollua"
description = "Lua 5.3 bindings for Rust"
repository = "https://github.com/MisterPeModder/Pollua"
version = "0.1.0"
authors = ["Yanis Guaye <yguaye44@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["lua"]
categories = ["api-bindings", "development-tools::ffi"]

[dependencies]
libc = "^0.2.65"

[dependencies.lua-sys]
path = "lua-sys"
version = "^0.2.0"
default-features = false
features = ["va-list", "std"]

[features]
default = []
system-lua = ["lua-sys/system-lua"]

[[example]]
name = "version"

[[example]]
name = "interpreter"
