[package]
name = "lua-sys"
version = "0.1.0"
authors = ["Yanis Guaye <yguaye44@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
libc = "^0.2.65"

[build-dependencies]
cc = { version = "~1.0.46", optional = true }
bindgen = { version = "^0.51.1", optional = true }

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
pkg-config = { version = "^0.3.16", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "^0.2.7"

[features]
default = ["embedded-lua"]
embedded-lua = ["cc"]
system-lua = ["pkg-config"]