[package]
name = "lua-sys"
description = "Raw Lua 5.3 bindings for Rust, used by Pollua"
repository = "https://github.com/MisterPeModder/Pollua"
version = "0.1.0"
authors = ["Yanis Guaye <yguaye44@gmail.com>"]
edition = "2018"
build = "build.rs"
keywords = ["lua"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = "^0.2.65"

va_list = {version = "^0.1.3", optional = true }

[build-dependencies]
cc = { version = "~1.0.46", optional = true }
bindgen = { version = "^0.51.1", optional = true }

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
pkg-config = { version = "^0.3.16", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "^0.2.7"

[features]
default = ["embedded-lua", "va-list"]
embedded-lua = ["cc"]
system-lua = ["pkg-config"]
va-list = ["va_list"]
