[package]
name = "lua-sys"
description = "Raw Lua 5.3 bindings for Rust, used by Pollua"
repository = "https://github.com/MisterPeModder/Pollua"
version = "0.2.0"
authors = ["Yanis Guaye <yguaye44@gmail.com>"]
edition = "2018"
links = "lua"
readme = "README.md"
build = "build/main.rs"
keywords = ["lua"]
categories = ["api-bindings", "external-ffi-bindings", "development-tools::ffi", "no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
libc = "^0.2.65"
va_list = {version = "^0.1.3", optional = true }
cfg-if = "^0.1.10"

[build-dependencies]
libc = "^0.2.65"
rustc_version = "^0.2.3"
cc = "~1.0.46"
pkg-config = { version = "^0.3.16", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = "^0.2.7", optional = true }

[features]
default = ["va-list", "std"]
system-lua = ["pkg-config", "vcpkg"]
va-list = ["va_list"]
std = []
lua-compat = []
